# db-schema-tool

./: .env.example  .gitignore  CLAUDE.md  HOW_TO_RUN.md  README.md  pyproject.toml  run-full.bat  run-stage1.bat  setup.bat  stage1.json
crawler/: ai_client.py  cli.py  connection.py  constants.py  json_parser.py  memory.py  report.py  stage1.py  stage2.py  stage3.py  types.py
mock/: seed_mock_db.py
